wip timer countdown

--- a/www/lib/ionic/scss/_variables.scss
+++ b/www/lib/ionic/scss/_variables.scss
@@ -4,8 +4,10 @@
 
 $light:                           #fff !default;
 $stable:                          #f8f8f8 !default;
-$positive:                        #387ef5 !default;
-$calm:                            #11c1f3 !default;
+// $positive:                        #387ef5 !default;
+$positive:                        #EEAE39 !default;
+// $calm:                            #11c1f3 !default;
+$calm:                            #AD3D72 !default;
 $balanced:                        #33cd5f !default;
 $energized:                       #ffc900 !default;
 $assertive:                       #ef473a !default;
