--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,30 +21,57 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 @import url(https://fonts.googleapis.com/css?family=Oxygen);
+@import url(https://fonts.googleapis.com/css?family=Lobster);
+
+
+* {
+  margin: 0px;
+  border-box: 0px;
+}
 
 html * {
   font-family: 'Oxygen';
 }
 
+h3 {
+  color: $calm;
+}
+
+.tabs-top > .tabs, .tabs.tabs-top {
+    top: 0 !important;
+}
+
+.has-tabs-top {
+    top: 54px !important;
+}
+
+.homeButton {
+  padding: 0px 7px 0px 18px;
+  display: flex;
+}
+
 .btnShadow {
+  margin: 0px 10px 20px 1px;
   width: 100%;
-  margin-bottom: 20px;
-  box-shadow: 1px 4px 5px #888888;
+  // margin-bottom: 20px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   font-size: 18px;
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
 .colorButton {
   text-align: center;
-  margin-top: 375px;
+  margin-top: 320px;
 
 }
 
 #foundGroup {
   margin-left: 36px;
-  z-index: 1;
+  // z-index: 1;
 }
 
-.main-header {
+.main-bgImg {
+
   background-image: url("http://static1.squarespace.com/static/5237edb1e4b019e0e587e9a5/525d34f2e4b0fb967a4d6fc0/525d34fde4b076bd2b772922/1381840128359/Ketubah-design-inpiration6.jpg");
 }
 
@@ -52,12 +79,16 @@ html * {
   padding: 10px;
 }
 
+.item-input {
+  color: #C6C6C6;
+}
+
 .logo {
-  border: 2px solid black;
   color: $royal;
-  font-size: 40px;
+  font-size: 100px;
   text-align: center;
-  margin: 50px 50px;
+  font-family: 'Lobster';
+  margin: 30% 0% 20% 0%;
 }
 
 .tab-item.tab-item-active, .tab-item.active, .tab-item.activated {
@@ -77,10 +108,11 @@ html * {
 .countdownTimer {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-  height: 100px;
+  // height: 100px;
   margin-bottom: 10px;
-  font-size: 30px;
+  font-size: 70px;
   text-align: center;
+  padding: 10%;
 }
 
 .displayNameList {
@@ -101,6 +133,76 @@ html * {
   margin-left: -30px;
   margin-top: -22px;
 }
+
+.slide-in-right {
+  -webkit-transform: translateX(100%);
+    transform: translateX(100%); }
+
+.slide-in-right.ng-enter, .slide-in-right > .ng-enter {
+  -webkit-transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 400ms;
+  transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 400ms; }
+
+.slide-in-right.ng-enter-active, .slide-in-right > .ng-enter-active {
+  -webkit-transform: translateX(0);
+    transform: translateX(0); }
+
+.slide-in-right.ng-leave, .slide-in-right > .ng-leave {
+  -webkit-transition: all ease-in-out 250ms;
+  transition: all ease-in-out 250ms; }
+
+
+
+.inputForm,
+.modalMessage {
+  padding-top: 20px;
+  width: 90%;
+  min-height: 0 !important;
+  // height: 300px !important;
+  top: 25%;
+  left: 5%;
+  right: 5%;
+  bottom: 5%;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 10px;
+  -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  margin: auto; }
+
+.item-input {
+  margin-bottom: 5px;
+  border: 5px solid white;
+  box-shadow:
+    inset 0 0 8px rgba(0, 0, 0, 0.1),
+          0 0 16px rgba(0, 0, 0, 0.1);
+
+}
+
+input[type=time] {
+  font-size: 19px;
+  margin: -10px 0px 0px 20px;
+
+}
+// .inputForm .ion-modal-content-custom {
+//   width: 100%;
+//   height: 100%;
+//   color: #FFF;
+//   background-color: #333;
+//   border-radius: 10px; }
+
+/* Fix modal backdrop for smaller devices */
+// @media (max-width: 679px) {
+//   .active .modal-backdrop-bg {
+//     opacity: .5; }
+//   .modal-backdrop-bg {
+//     -webkit-transition: opacity 300ms ease-in-out;
+//     transition: opacity 300ms ease-in-out;
+//     background-color: #000;
+//     opacity: 0.8; } }
+
+
+
+
+
 
 //config
 // $highlightColor: #ddd;
