--- a/www/templates/qsuggestions.html
+++ b/www/templates/qsuggestions.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Create">
-  <ion-content class="padding">
+  <ion-content class="padding main-bgImg">
 
     <!-- <fieldset> -->
 
