--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,7 +6,7 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-color-active-energized">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Home" href="#/tab/home">
+  <ion-tab title="Main" href="#/tab/home">
     <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
 
