--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -48,7 +48,7 @@
         <input type="text" id="eventCreated" placeholder="Event that you're joining" ng-model="joiningThisEvent" />
       </label>
       <div ng-controller="ModalController">
-        <a class="button button-full button-calm" ng-click="white(); ">
+        <a class="button button-full button-calm" ng-click="white(); openModal(2) ">
           Go!
         </a>
       </div>
