--- a/www/templates/guestView.html
+++ b/www/templates/guestView.html
@@ -15,7 +15,7 @@
     <h3>{ event.name } mixer starts in...</h3>
 
       <div class="countdownTimer">
-        COUNTDOWN TIMER
+        <p>{{ startTime }}</p>
       </div>
 
       <div class="padding" ng-controller="testCtrl" >
