--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -21,10 +21,10 @@
         <input type="text" placeholder="Create Passcode" ng-model="event.passcode">
       </label>
 
-      <label class="item item-input">
+ <!--      <label class="item item-input">
         <span class="input-label">Start Time</span>
         <input type="time" ng-model="startTime"></input>
-      </label>
+      </label> -->
 
       <div ng-controller="ModalController">
         <a id="startButton" class="button button-full button-positive"  href="#/tab/adminTab" ng-click="addEvent(eventCreated); openModal(1) ; openModal(3) ; beginCountdown(startTime);  ">
