--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -59,6 +59,8 @@ h3 {
   width: 100%;
   font-size: 18px;
   background-color: rgba(255, 255, 255, 0.6);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+
 }
 
 .colorButton {
@@ -67,8 +69,42 @@ h3 {
 
 }
 
-.inputTime {
+.timeDiv {
   display: flex;
+
+}
+
+.collen {
+  vertical-align: middle;
+  line-height: 70px;
+  font-size: 70px;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  font-size: 70px;
+  height: 90px;
+  line-height: 90px;
+  text-align: center;
+  vertical-align: middle;
+  width: 100px;
+  margin-left: 9px;
+  border: 1px solid black;
+}
+
+.ampm {
+  display: flex;
+  flex-flow: column;
+  margin: 7px 0px 0px 10px;
+
+  button {
+    margin-top: 5px;
+  }
 }
 
 #foundGroup {
@@ -115,13 +151,6 @@ h3 {
 
 }
 
-.button {
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-}
-
-// .row {
-//   text-align: center;
-// }
 .countdownTimer {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
@@ -200,11 +229,7 @@ h3 {
 
 }
 
-input[type=time] {
-  font-size: 19px;
-  margin: -10px 0px 0px 20px;
 
-}
 // .inputForm .ion-modal-content-custom {
 //   width: 100%;
 //   height: 100%;
