--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9757,14 +9757,42 @@ h3 {
   margin: 0px 10px 20px 1px;
   width: 100%;
   font-size: 18px;
-  background-color: rgba(255, 255, 255, 0.6); }
+  background-color: rgba(255, 255, 255, 0.6);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); }
 
 .colorButton {
   text-align: center;
   margin-top: 320px; }
 
-.inputTime {
+.timeDiv {
   display: flex; }
+
+.collen {
+  vertical-align: middle;
+  line-height: 70px;
+  font-size: 70px; }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0; }
+
+input[type=number] {
+  font-size: 70px;
+  height: 90px;
+  line-height: 90px;
+  text-align: center;
+  vertical-align: middle;
+  width: 100px;
+  margin-left: 9px;
+  border: 1px solid black; }
+
+.ampm {
+  display: flex;
+  flex-flow: column;
+  margin: 7px 0px 0px 10px; }
+  .ampm button {
+    margin-top: 5px; }
 
 #foundGroup {
   margin-left: 36px; }
@@ -9798,9 +9826,6 @@ h3 {
 .adminDiv {
   background-color: RGBA(220, 202, 192, 0.3);
   background-image: url("http://static1.squarespace.com/static/5237edb1e4b019e0e587e9a5/525d34f2e4b0fb967a4d6fc0/525d34fde4b076bd2b772922/1381840128359/Ketubah-design-inpiration6.jpg"); }
-
-.button {
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); }
 
 .countdownTimer {
   border-top: 1px solid black;
@@ -9866,9 +9891,5 @@ h3 {
   margin-bottom: 5px;
   border: 5px solid white;
   box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1), 0 0 16px rgba(0, 0, 0, 0.1); }
-
-input[type=time] {
-  font-size: 19px;
-  margin: -10px 0px 0px 20px; }
 
 /* Fix modal backdrop for smaller devices */
