--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -74,6 +74,14 @@ h3 {
 
 }
 
+.timerBnts {
+
+}
+
+.eachTimerBtn {
+  margin: 3px;
+}
+
 .collen {
   vertical-align: middle;
   line-height: 70px;
