--- a/www/templates/guestView.html
+++ b/www/templates/guestView.html
@@ -15,9 +15,9 @@
     <h3>{ event.name } mixer starts in...</h3>
 
     <div class="timeDiv" ng-controller="TimerCtrl">
-        <input type="number" placeholder="00" ng-model="hour"></input>
+        <div > </div>
         <div class="collen">:</div>
-        <input type="number" placeholder="00" ng-model="minutes"></input>
+        <h1> {{ minutes1 }} {{ minutes2 }}  </h1>
     </div>
 
        <a class="button" value="color button" ng-click="myStyle=setColor(); findFoundBtn=true;"></a>
