--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -74,6 +74,7 @@ h3 {
   // background-color: green;
   margin: 120px 0px 0px 25px;
   position: absolute;
+  flex-flow: row wrap;
 }
 
 .timerBnts {
@@ -86,27 +87,26 @@ h3 {
   margin: 3px;
 }
 
-.collen {
-  vertical-align: middle;
-  line-height: 70px;
-  font-size: 70px;
+.displayCd {
+  font-size: 60px;
+  padding-top: 20px;
 }
+// input[type=number]::-webkit-inner-spin-button,
+// input[type=number]::-webkit-outer-spin-button {
+//   -webkit-appearance: none;
+//   margin: 0;
+// }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-input[type=number] {
+#inputNum {
   font-size: 70px;
   height: 160px;
-  line-height: 73px;
+  line-height: 160px;
   text-align: center;
   width: 100px;
   margin-left: 9px;
   border-radius: 20px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  color: #ABA8AA;
 }
 
 .add1 {
@@ -147,12 +147,8 @@ input[type=number] {
 
 }
 
-.eachNumCont {
-  // background-color: blue;
-}
 
 .minSec {
-  // background-color: yellow;
   text-align: center;
   margin-top: 10px;
 }
@@ -167,10 +163,6 @@ input[type=number] {
 
 .contentDiv {
   padding: 10px;
-}
-
-.item-input {
-  color: #C6C6C6;
 }
 
 .logo {
@@ -197,9 +189,6 @@ input[type=number] {
   position: absolute;
 }
 
-.adminDiv {
-  background-color: RGBA(220, 202, 192, 0.3);
-}
 
 .adminImg {
   position: absolute;
@@ -263,21 +252,58 @@ input[type=number] {
 
 
 
-.inputForm,
+//Scale-In Animation
+.scale-in {
+  transform: scale(0.9);
+  opacity: 0;
+}
+.scale-in.ng-enter,
+.scale-in > .ng-enter {
+  transition: all cubic-bezier(.1, .7, .1, 1) 800ms;
+}
+
+.scale-in.ng-enter-active,
+.scale-in > .ng-enter-active {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.scale-in.ng-leave,
+.scale-in > .ng-leave {
+  transition: all ease-in-out 250ms;
+}
+
+
+
+.textModalDiv {
+  background-color: RGBA(32, 32, 32, 0.7);
+  height: 440px;
+  padding: 30px;
+
+}
+
 .modalMessage {
-  padding-top: 20px;
+  color: white;
+  // font-size: 20px;
+  padding: 30px;
   width: 90%;
   min-height: 0 !important;
-  // height: 300px !important;
-  top: 25%;
+  height: 500px !important;
+  top: 10%;
+  right: 7.5%;
   left: 5%;
-  right: 5%;
   bottom: 5%;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: RGBA(255, 255, 255, 0.9);
   border-radius: 10px;
-  -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-  margin: auto; }
+  -webkit-box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.5);
+  margin: auto;
+}
+
+.okayBtn {
+  margin-top: 15px;
+  float: right;
+}
 
 .item-input {
   margin-bottom: 5px;
@@ -306,177 +332,3 @@ input[type=number] {
 //     background-color: #000;
 //     opacity: 0.8; } }
 
-
-
-
-
-
-//config
-// $highlightColor: #ddd;
-// $trackColor: #4aaebf;
-// $size: 100px;
-// $thickness: 9px;
-// $background: #fff;
-// $labelColor: $highlightColor;
-
-// * {
-//   -moz-box-sizing: border-box;
-//   -ms-box-sizing: border-box;
-//   box-sizing: border-box;
-// }
-
-// .timer {
-//   width: $size;
-//   height: $size;
-//   position: relative;
-//   display: table;
-//   float: left;
-//   margin: 1em .5em;
-//   position: relative;
-
-//   &:before {
-//     content: '';
-//     position: absolute;
-//     height: 12px;
-//     width: 12px;
-//     border-radius: 50%;
-//     display: block;
-//     top: -1px;
-//     left: 50%;
-//     z-index: 10;
-//     margin-left: -5px;
-//     background: $trackColor;
-//   }
-
-//   .track {
-//     border: ($thickness - 0) solid $trackColor;
-//     width: $size;
-//     height: $size;
-//     border-radius: 50%;
-//     position: absolute;
-//   }
-
-//   .face {
-//     clip: rect(0, $size, $size, $size/2);
-//     width: $size;
-//     height: $size;
-//     position: absolute;
-//     .no-cssanimations & {
-//       display:none;
-//     }
-//     .spinner {
-//       border: $thickness solid $highlightColor;
-//       border-radius: 50%;
-//       height: $size;
-//       width: $size;
-//       position: absolute;
-//       z-index: 2;
-//       clip: rect(0, $size/2, $size, 0);
-
-//       transition: -webkit-transform 1s;
-//       transition: -moz-transform 1s;
-//       transition: transform 1s;
-
-//       -webkit-animation: animR 60s linear infinite;
-//       -moz-animation: animR 60s linear infinite;
-//       animation: animR 60s linear infinite;
-//       -webkit-animation-delay:  0s;
-//       -moz-animation-delay:  0s;
-//       animation-delay: 0s;
-
-//     }
-//   }
-
-//   .l.face {
-//     clip: rect(0, $size/2, $size, 0);
-//     .spinner {
-//       -webkit-animation-name: animL;
-//       -moz-animation-name: animL;
-//       animation-name: animL;
-
-//       clip: rect(0, $size/2, $size, 0);
-//     }
-//   }
-// }
-
-// .time {
-//   display: table;
-//   width: $size;
-//   height: $size;
-//   position: relative;
-//   p {
-//     display: table-cell;
-//     text-align: center;
-//     vertical-align: middle;
-//     strong {
-//       color: $labelColor;
-//       letter-spacing: 1px;
-//       font-size: 1.5em;
-//       font-weight: normal;
-//     }
-//     span {
-//       color: #222;
-//       // font-style: italic;
-//       // font-family: serif;
-//     }
-//   }
-// }
-
-// @-webkit-keyframes animR {
-//     0% {-webkit-transform: rotate(0deg); }
-//   50% {-webkit-transform: rotate(180deg); }
-//     100% {-webkit-transform: rotate(180deg);}
-// }
-
-// @-webkit-keyframes animL {
-//     0% {-webkit-transform: rotate(180deg); }
-//     50% {-webkit-transform: rotate(180deg); }
-//     100% {-webkit-transform: rotate(360deg);}
-// }
-
-// @-moz-keyframes animR {
-//     0% {-moz-transform: rotate(0deg); }
-//   50% {-moz-transform: rotate(180deg); }
-//     100% {-moz-transform: rotate(180deg);}
-// }
-
-
-// @-moz-keyframes animL {
-//     0% {-moz-transform: rotate(180deg); }
-//     50% {-moz-transform: rotate(180deg); }
-//     100% {-moz-transform: rotate(360deg);}
-// }
-
-// @keyframes animR {
-//     0% {transform: rotate(0deg); }
-//   50% {transform: rotate(180deg); }
-//     100% {transform: rotate(180deg);}
-// }
-
-
-// @keyframes animL {
-//     0% {transform: rotate(180deg); }
-//     50% {transform: rotate(180deg); }
-//     100% {transform: rotate(360deg);}
-// }
-
-// #secs .spinner {
-//   -webkit-animation-duration: 60s;
-//   -moz-animation-duration: 60s;
-//   animation-duration: 60s;
-// }
-// #mins .spinner {
-//   -webkit-animation-duration: 3600s;
-//   -moz-animation-duration: 3600s;
-//   animation-duration: 3600s;
-// }
-// #hrs .spinner {
-//   -webkit-animation-duration: 86400s;
-//   -moz-animation-duration: 86400s;
-//   animation-duration: 86400s;
-// }
-// #days .spinner {
-//   -webkit-animation-duration: 2419200s;
-//   -moz-animation-duration: 2419200s;
-//   animation-duration: 2419200s;
-// }
