--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -73,13 +73,16 @@ h3 {
   display: flex;
   margin: 120px 0px 0px 25px;
   position: absolute;
-  flex-flow: row wrap;
+  // flex-flow: row nowrap;
 }
 
 .timerBnts {
+  position: absolute;
   display: flex;
-  flex-flow: column;
-  margin-left: 30px;
+  flex-flow: row nowrap;
+  top: 350px;
+  left: 30px;
+  background-color: blue;
 }
 
 .eachTimerBtn {
@@ -87,11 +90,28 @@ h3 {
 }
 
 .displayCd {
+  background-color: pink;
+  position: absolute;
   font-size: 60px;
   padding-top: 20px;
+  -webkit-transition:all linear 0.5s;
+  transition:all linear 0.5s;
 }
 
+.minSec {
+  text-align: center;
+  margin-top: 10px;
+}
 
+.eachNumCont {
+  // display: flex;
+  // background-color: blue;
+  // flex-flow: row wrap;
+}
+.inputNumWrap {
+  display: flex;
+  // flex-flow: row nowrap;
+}
 #inputNum {
   font-size: 55px;
   height: 160px;
@@ -102,6 +122,7 @@ h3 {
   border-radius: 20px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   color: #ABA8AA;
+  background-color: pink;
 }
 
 .add1 {
@@ -143,10 +164,6 @@ h3 {
 }
 
 
-.minSec {
-  text-align: center;
-  margin-top: 10px;
-}
 
 #foundGroup {
   margin-left: 36px;
